Bug 215842 - JavaScript resets fieldset absolute positioning. Patch by Boris Zbarsky <bzbarsky@mit.edu> r+sr=dbaron@dbaron.org a=asa@mozilla.org